--- a/src/app.html
+++ b/src/app.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        Development
+        <%= htmlWebpackPlugin.options.title %>
     </title>
-<script defer src="index.bundle.js"></script><script defer src="runtime.bundle.js"></script><script defer src="print.bundle.js"></script><script defer src="another.bundle.js"></script><script defer src="shared.bundle.js"></script></head>
+</head>
 
 <body>
     <img src="icon.png" alt="">
